--- a/admin/create.html
+++ b/admin/create.html
@@ -36,16 +36,14 @@
             <div class="create-card-wrapper">
                 <!-- Added professional card with icon header -->
                 <div class="card create-card">
-                    <!-- Moved logo inline with heading -->
+                    <!-- Centered logo above heading instead of inline -->
                     <div class="card-header create-header">
-                        <div class="create-title-wrapper">
-                            <div class="create-icon-wrapper">
-                                <svg class="create-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                    <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
-                                </svg>
-                            </div>
-                            <h2>Create New Verification</h2>
+                        <div class="create-icon-wrapper">
+                            <svg class="create-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
+                            </svg>
                         </div>
+                        <h2>Create New Verification</h2>
                         <p class="card-subtitle">Add a new verified seller to the platform</p>
                     </div>
 
