--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Wisteria Trust is the world’s premier independent authority for seller verification, ensuring global business legitimacy and consumer confidence." />
+  <meta name="keywords" content="seller verification, global authority, trust, verification protocol, Wisteria Trust ID" />
   <link rel="icon" type="image/png" href="assets/images/favicon.png">
   <title>Wisteria Trust — Global Authority in Premium Seller Verification</title>
 
@@ -31,16 +33,22 @@
 
     <div class="nav-actions">
       <a href="#verify" class="nav-cta">Portal Access</a>
-      <div class="menu-btn" id="menuBtn"><span></span><span></span></div>
+      <button class="mobile-menu-toggle" id="menuToggle" aria-label="Toggle Menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
     </div>
   </div>
 </nav>
 
-<div class="mobile-menu" id="mobileMenu">
-  <a href="#about">Mission</a>
-  <a href="#process">The Protocol</a>
-  <a href="#verify">Verification Hub</a>
-  <a href="#impact">Institutional Value</a>
+<div class="mobile-overlay" id="mobileOverlay">
+  <div class="mobile-menu-content">
+    <a href="#about" class="mobile-link">Mission</a>
+    <a href="#process" class="mobile-link">Protocol</a>
+    <a href="#verify" class="mobile-link">Verification Hub</a>
+    <a href="#impact" class="mobile-link">Value</a>
+  </div>
 </div>
 
 <main>
