--- a/index.html
+++ b/index.html
@@ -220,39 +220,55 @@
 <footer>
   <div class="container">
     <div class="footer-grid">
-      <div class="footer-brand">
+      <div class="footer-brand" data-aos="fade-right">
         <div class="brand">
           <div class="logo-mark">W</div>
           <span>Wisteria Trust</span>
         </div>
-        <p>The global authority in independent seller verification infrastructure.</p>
+        <p class="footer-desc">The global authority in independent seller verification infrastructure. Engineering institutional trust for the next generation of global commerce.</p>
+        <div class="footer-certification">
+          <div class="cert-badge">
+            <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor"><path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"/></svg>
+            <span>ISO Certified Standards</span>
+          </div>
+        </div>
       </div>
       
-      <div class="footer-links">
+      <div class="footer-links-container" data-aos="fade-left">
         <div class="f-col">
-          <h4>Portal</h4>
+          <h4>Institutional Portal</h4>
           <a href="#verify">Verify Seller</a>
-          <a href="#process">Protocol</a>
+          <a href="#process">Verification Protocol</a>
+          <a href="#impact">Strategic Impact</a>
         </div>
         <div class="f-col">
-          <h4>Legal</h4>
-          <a href="#">Privacy</a>
-          <a href="#">Terms</a>
-          <a href="#">Compliance</a>
+          <h4>Legal Framework</h4>
+          <a href="#">Privacy Protocol</a>
+          <a href="#">Terms of Authority</a>
+          <a href="#">Global Compliance</a>
         </div>
         <div class="f-col">
-          <h4>Connect</h4>
-          <a href="https://x.com/trustwisteria?s=11" target="_blank">X (Twitter)</a>
-          <a href="https://www.linkedin.com/company/wisteria-trust/" target="_blank">LinkedIn</a>
-          <a href="https://www.instagram.com/wisteriatrust?igsh=OXE5eGQ0YWV5eTBs&utm_source=qr" target="_blank">Instagram</a>
-          <a href="https://www.facebook.com/share/14RCYAWwHPH/?mibextid=wwXIfr" target="_blank">Facebook</a>
-          <a href="https://www.youtube.com/@WisteriaTrust" target="_blank">YouTube</a>
-          <a href="mailto:wisteriatrust.verify@gmail.com">Direct Inquiry</a>
+          <h4>Global Connect</h4>
+          <div class="social-links-grid">
+            <a href="https://x.com/trustwisteria?s=11" target="_blank" aria-label="X (Twitter)">X / Twitter</a>
+            <a href="https://www.linkedin.com/company/wisteria-trust/" target="_blank" aria-label="LinkedIn">LinkedIn</a>
+            <a href="https://www.instagram.com/wisteriatrust?igsh=OXE5eGQ0YWV5eTBs&utm_source=qr" target="_blank" aria-label="Instagram">Instagram</a>
+            <a href="https://www.facebook.com/share/14RCYAWwHPH/?mibextid=wwXIfr" target="_blank" aria-label="Facebook">Facebook</a>
+            <a href="https://www.youtube.com/@WisteriaTrust" target="_blank" aria-label="YouTube">YouTube</a>
+          </div>
+          <a href="mailto:wisteriatrust.verify@gmail.com" class="footer-cta">Direct Inquiry</a>
         </div>
       </div>
+    </div>
     
     <div class="footer-bottom">
-      <p>© 2025 Wisteria Trust. Independent Seller Verification Authority. All rights reserved.</p>
+      <div class="bottom-inner">
+        <p>© 2025 Wisteria Trust. Independent Seller Verification Authority. All rights reserved.</p>
+        <div class="bottom-links">
+          <a href="#">Security Disclosure</a>
+          <a href="#">Cookie Policy</a>
+        </div>
+      </div>
     </div>
   </div>
 </footer>
