--- a/index.html
+++ b/index.html
@@ -77,13 +77,24 @@
 
       <div class="hero-stats">
         <div class="stat-item">
-          <span class="stat-num">100%</span>
-          <span class="stat-label">Independent Analysis</span>
+          <span class="stat-num" id="certCounter">1,240+</span>
+          <span class="stat-label">Certified Entities</span>
         </div>
         <div class="stat-item">
           <span class="stat-num">Global</span>
-          <span class="stat-label">Compliance Reach</span>
+          <span class="stat-label">Sovereign Authority</span>
         </div>
+      </div>
+    </div>
+    <!-- Added a luxury dynamic marquee for real-time institutional activity -->
+    <div class="trust-marquee">
+      <div class="marquee-content">
+        <span>• INSTITUTIONAL VERIFICATION IN PROGRESS</span>
+        <span>• WT-2025-882 AUTHENTICATED</span>
+        <span>• GLOBAL REGISTRY UPDATE COMPLETE</span>
+        <span>• NEW SOVEREIGN NODE ESTABLISHED</span>
+        <span>• ASSET LEGITIMACY SECURED</span>
+        <span>• INSTITUTIONAL VERIFICATION IN PROGRESS</span>
       </div>
     </div>
   </section>
@@ -211,6 +222,33 @@
           <div class="v-icon">💎</div>
           <h3>Prestige Status</h3>
           <p>A Wisteria Verified™ mark is an elite signal of business maturity and ethics.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Added a new Strategic Transparency Timeline section for authority building -->
+  <section class="authority-timeline">
+    <div class="container">
+      <div class="section-header centered" data-aos="fade-up">
+        <span class="section-tag">Verification Protocol</span>
+        <h2>The Architecture of Global Trust</h2>
+      </div>
+      <div class="timeline-grid">
+        <div class="timeline-item" data-aos="reveal-left">
+          <div class="t-year">Phase I</div>
+          <h3>Deep Forensic Analysis</h3>
+          <p>Exhaustive identity cross-referencing against global legal and financial databases.</p>
+        </div>
+        <div class="timeline-item" data-aos="reveal-right">
+          <div class="t-year">Phase II</div>
+          <h3>Decentralized Consensus</h3>
+          <p>Multi-node verification ensuring no single point of failure in legitimacy claims.</p>
+        </div>
+        <div class="timeline-item" data-aos="reveal-left">
+          <div class="t-year">Phase III</div>
+          <h3>Registry Immutability</h3>
+          <p>Final WTID issuance and inclusion in the high-fidelity sovereign trust hub.</p>
         </div>
       </div>
     </div>
