--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 
       <div class="hero-stats">
         <div class="stat-item">
-          <span class="stat-num" id="certCounter">1,240+</span>
-          <span class="stat-label">Certified Entities</span>
+          <span class="stat-num" id="certCounter">Verified</span>
+          <span class="stat-label">Institutional Status</span>
         </div>
         <div class="stat-item">
           <span class="stat-num">Global</span>
@@ -89,12 +89,11 @@
     <!-- Added a luxury dynamic marquee for real-time institutional activity -->
     <div class="trust-marquee">
       <div class="marquee-content">
-        <span>• INSTITUTIONAL VERIFICATION IN PROGRESS</span>
-        <span>• WT-2025-882 AUTHENTICATED</span>
-        <span>• GLOBAL REGISTRY UPDATE COMPLETE</span>
-        <span>• NEW SOVEREIGN NODE ESTABLISHED</span>
-        <span>• ASSET LEGITIMACY SECURED</span>
-        <span>• INSTITUTIONAL VERIFICATION IN PROGRESS</span>
+        <span>• WISTERIA TRUST: SETTING THE GLOBAL BENCHMARK FOR DIGITAL LEGITIMACY</span>
+        <span>• EMPOWERING GLOBAL COMMERCE THROUGH SOVEREIGN VERIFICATION</span>
+        <span>• YOUR MARK OF ABSOLUTE INSTITUTIONAL INTEGRITY</span>
+        <span>• BRIDGING THE TRUST GAP IN THE GLOBAL DIGITAL ECONOMY</span>
+        <span>• WISTERIA TRUST: SETTING THE GLOBAL BENCHMARK FOR DIGITAL LEGITIMACY</span>
       </div>
     </div>
   </section>
