--- a/index.html
+++ b/index.html
@@ -89,11 +89,10 @@
     <!-- Added a luxury dynamic marquee for real-time institutional activity -->
     <div class="trust-marquee">
       <div class="marquee-content">
-        <span>• WISTERIA TRUST: SETTING THE GLOBAL BENCHMARK FOR DIGITAL LEGITIMACY</span>
-        <span>• EMPOWERING GLOBAL COMMERCE THROUGH SOVEREIGN VERIFICATION</span>
-        <span>• YOUR MARK OF ABSOLUTE INSTITUTIONAL INTEGRITY</span>
-        <span>• BRIDGING THE TRUST GAP IN THE GLOBAL DIGITAL ECONOMY</span>
-        <span>• WISTERIA TRUST: SETTING THE GLOBAL BENCHMARK FOR DIGITAL LEGITIMACY</span>
+        <span>• WISTERIA TRUST: ARCHITECTING GLOBAL LEGITIMACY THROUGH SOVEREIGN VERIFICATION</span>
+        <span>• THE GOLD STANDARD FOR INSTITUTIONAL TRUST IN THE DIGITAL ECONOMY</span>
+        <span>• BRIDGING THE GAP BETWEEN GLOBAL COMMERCE AND ABSOLUTE INTEGRITY</span>
+        <span>• WISTERIA TRUST: ARCHITECTING GLOBAL LEGITIMACY THROUGH SOVEREIGN VERIFICATION</span>
       </div>
     </div>
   </section>
