--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <meta name="description" content="Wisteria Trust is the world’s premier independent authority for seller verification, ensuring global business legitimacy and consumer confidence." />
   <meta name="keywords" content="seller verification, global authority, trust, verification protocol, Wisteria Trust ID" />
   <link rel="icon" type="image/png" href="assets/images/favicon.png">
