--- a/seller/index.html
+++ b/seller/index.html
@@ -127,6 +127,7 @@
         </div>
     </footer>
 
-    <script src="seller-logic.js"></script>
+    <!-- Updated script source to seller.js -->
+    <script src="seller.js"></script>
 </body>
 </html>
