--- a/seller/index.html
+++ b/seller/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seller Verification | Wisteria Trust</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="seller.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,28 +12,17 @@
 <body class="luxury-theme">
     <div class="grain-overlay"></div>
     
-    <nav class="luxury-nav">
-        <div class="nav-container">
-            <a href="/" class="brand-logo">
-                <span class="logo-icon">W</span>
-                <span class="logo-text">Wisteria Trust</span>
-            </a>
-            <div class="nav-meta">
-                <span class="status-badge live">System Active</span>
-            </div>
-        </div>
-    </nav>
-
     <main class="seller-container">
-        <header class="seller-header" data-aos="fade-up">
+        <!-- Reverting to original content structure with luxury styling -->
+        <header class="seller-header">
             <div class="header-content">
-                <p class="eyebrow">Institutional Verification Portal</p>
-                <h1 class="premium-heading">Independent <br><span>Identity Portfolio</span></h1>
-                <p class="subtitle">This sovereign identity report confirms the legitimacy and operational integrity of the entity identified below.</p>
+                <p class="eyebrow">Institutional Verification Protocol</p>
+                <h1 class="premium-heading">Seller <br><span>Verification Details</span></h1>
+                <p class="subtitle">Official verification report for the Wisteria Trust registered entity. This document confirms the active standing and authenticity of the seller.</p>
             </div>
         </header>
 
-        <section class="verification-profile" data-aos="fade-up">
+        <section class="verification-profile">
             <div class="profile-card glass-morphism">
                 <div class="card-glow"></div>
                 <div class="profile-header">
@@ -51,14 +39,14 @@
                         </svg>
                     </div>
                     <div class="profile-title">
-                        <h2 id="businessName">Loading Entity...</h2>
-                        <p id="vid">WT-0000-000</p>
+                        <h2 id="businessName">Loading Business...</h2>
+                        <p id="vid">Verification ID: —</p>
                     </div>
                 </div>
 
                 <div class="info-grid">
                     <div class="info-item">
-                        <span class="label">Principal Representative</span>
+                        <span class="label">Seller Name</span>
                         <span class="value" id="sellerName">—</span>
                     </div>
                     <div class="info-item">
@@ -66,25 +54,25 @@
                         <span class="value status-active" id="status">Verifying...</span>
                     </div>
                     <div class="info-item">
-                        <span class="label">Renewal Threshold</span>
+                        <span class="label">Valid Till</span>
                         <span class="value" id="validTill">—</span>
                     </div>
                     <div class="info-item">
-                        <span class="label">Registry Class</span>
+                        <span class="label">Institutional Level</span>
                         <span class="value">Sovereign Tier I</span>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="trust-assets" data-aos="fade-up">
+        <section class="trust-assets">
             <div class="asset-grid">
                 <div class="asset-card glass-morphism">
                     <h3>Integration Assets</h3>
-                    <p>Utilize these assets to communicate your verified status across institutional platforms.</p>
+                    <p>Copy these assets to display your verified status on your official platforms.</p>
                     
                     <div class="action-block">
-                        <label>Sovereign Registry Link</label>
+                        <label>Verification Page Link</label>
                         <div class="code-box">
                             <code id="verifyLink">Generating...</code>
                         </div>
@@ -94,7 +82,7 @@
                     </div>
 
                     <div class="action-block">
-                        <label>Institutional Badge Embed</label>
+                        <label>Institutional Badge Code</label>
                         <div class="code-box">
                             <pre id="embedCode">Processing...</pre>
                         </div>
@@ -107,11 +95,11 @@
                 <div class="asset-card glass-morphism dark-accent">
                     <div class="card-pattern"></div>
                     <h3>Strategic Mandate</h3>
-                    <p>The Wisteria Trust verification protocol ensures absolute identity transparency through multi-node consensus and forensic data cross-referencing.</p>
+                    <p>Wisteria Trust ensures absolute transparency through immutable records and forensic cross-referencing of all verified institutional members.</p>
                     <ul class="mandate-list">
-                        <li><span>•</span> Zero-Knowledge Identity Proofing</li>
-                        <li><span>•</span> Immutable Ledger Inclusion</li>
-                        <li><span>•</span> Operational Integrity Audit</li>
+                        <li><span>•</span> Identity Authenticity Verification</li>
+                        <li><span>•</span> Secure Ledger Integration</li>
+                        <li><span>•</span> Annual Integrity Audit</li>
                     </ul>
                     <a href="/" class="pill-button primary shimmer">
                         <span>The Protocol</span>
@@ -123,11 +111,10 @@
 
     <footer class="luxury-footer">
         <div class="footer-bottom">
-            <p>&copy; 2025 Wisteria Trust. Independent Seller Verification Authority. Sovereign Infrastructure.</p>
+            <p>&copy; 2025 Wisteria Trust. Official Seller Verification Authority. All rights reserved.</p>
         </div>
     </footer>
 
-    <!-- Updated script source to seller.js -->
     <script src="seller.js"></script>
 </body>
 </html>
