--- a/seller/index.html
+++ b/seller/index.html
@@ -105,7 +105,7 @@
 
                     <div class="action-block">
                         <a href="/images/badge.png" download="wisteria-verified-badge.png" class="pill-button primary shimmer">
-                            <span>Download High-Res Badge</span>
+                            <span>Download Badge</span>
                         </a>
                     </div>
                     
@@ -131,3 +131,4 @@
     <script src="seller.js"></script>
 </body>
 </html>
+
