--- a/seller/index.html
+++ b/seller/index.html
@@ -104,7 +104,7 @@
                     </div>
 
                     <div class="action-block">
-                        <a href="/images/badge.png" download="wisteria-verified-badge.png" class="pill-button primary shimmer">
+                        <a href="badge.png" download="wisteria-verified-badge.png" class="pill-button primary shimmer">
                             <span>Download Badge</span>
                         </a>
                     </div>
@@ -131,4 +131,3 @@
     <script src="seller.js"></script>
 </body>
 </html>
-
