--- a/seller/index.html
+++ b/seller/index.html
@@ -100,7 +100,7 @@
                     <p class="asset-description">Official Wisteria Trust digital asset. Download and place this badge on your marketing materials or website.</p>
                     
                     <div class="badge-preview-container">
-                        <img src="/images/badge.png" alt="Wisteria Trust Verified Seller Badge" class="badge-preview-img">
+                        <img src="badge.png" alt="Wisteria Trust Verified Seller Badge" class="badge-preview-img">
                     </div>
 
                     <div class="action-block">
@@ -131,3 +131,4 @@
     <script src="seller.js"></script>
 </body>
 </html>
+
